Removed Testing Data, Bug Fixes, Text Overflow

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -26,8 +26,10 @@
 .container {
 	background: #2C3E50;
 	border-radius: 16px;
-	justify-content: center;
+	display: flex;
+	flex-direction: column;
 	align-items: center;
+	justify-content: space-around;
 }
 
 .wheel-container {
@@ -79,13 +81,6 @@
 .pagination {
 	color: #26DE81;
 	display: inline;
-}
-
-.student-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-around;
 }
 
 /* Responsive Width Elements */
